k8s-manifests/backend-service.yaml
apiVersion: v1

kind: Service
metadata:
  name: codechella-api
  namespace: codechella-api
spec:
  selector:
    app: codechella-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
