k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress
metadata:
  name: codechella-api-ingress
  namespace: codechella-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: codechella-api.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: codechella-api
            port:
              number: 8080
